# amazon-intelligent-shopping-assistant

./: .gitignore  Dockerfile.fastapi  Makefile  README.md  pyproject.toml
experiments/week-1/: amazon-sample-data.ipynb  practice.ipynb
experiments/week-2/: RAG-pipeline.ipynb  preprocessing-embeddings.ipynb  preprocessing.ipynb
experiments/week-3/: hybrid-search.ipynb
notebooks/: llm-apis.ipynb  test.ipynb
src/api/: app.py
src/api/api/: endpoints.py  middleware.py
src/api/core/: config.py
src/api/rag/: retrieval_generation.py
src/api/rag/prompts/: retrieval_generation.yml
src/api/rag/utils/: prompt_management.py
src/chatbot_ui/: app.py
