[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "cohere>=5.20.0",
    "fastapi>=0.118.0",
    "fastembed>=0.7.3",
    "google-genai>=1.40.0",
    "groq>=0.32.0",
    "instructor>=1.12.0",
    "ipykernel>=6.30.1",
    "langgraph",
    "langsmith>=0.4.34",
    "openai>=1.0.0,<2.0.0",
    "pandas==2.2.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.1",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]

